# ADS7128-emulator

./: .gitignore  LICENSE  README.md  pyproject.toml  run_test.sh
src/ads7128_emulator/: __init__.py  ads7128_emulator.py
tests/: test_emulator.py
