[build-system]
requires = ["setuptools >= 77.0.3", "smbus2"]
build-backend = "setuptools.build_meta"

[project]
name = "ADS7128-emulator"
version = "0.0.1"
authors = [
    { name = "Leonardo Scoppitto", email = "leonardo.scoppitto@gmail.com" },
]
description = "A small library to emulate the ADS7128 i2c device using i2c-stub"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/skiby7/ADS7128-emulator"
Issues = "https://github.com/skiby7/ADS7128-emulator/issues"
